--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,11 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
+                <p class="copyright text-muted">
+                    Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}
+                </p>
+                <img src="img/CodeWitchLogo.png" alt="Code Witch Logo" style="height: 50px; margin-left: auto; margin-right: auto ">
+
             </div>
         </div>
     </div>
