Add / to logo link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}
                 </p>
-                <img src="img/CodeWitchLogo.png" alt="Code Witch Logo" style="height: 50px; margin-left: auto; margin-right: auto ">
+                <img src="/img/CodeWitchLogo.png" alt="Code Witch Logo" style="height: 50px; margin-left: auto; margin-right: auto ">
 
             </div>
         </div>
